crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__scf__tests__r#while__compile.snap
---
source: crates/mlir-rs/src/dialect/scf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %c0 = arith.constant 0 : index
    %0 = scf.while (%arg0 = %c0) : (index) -> index {
      %false = arith.constant false
      %c42 = arith.constant 42 : index
      scf.condition(%false) %c42 : index
    } do {
    ^bb0(%arg0: index):
      %c42 = arith.constant 42 : index
      scf.yield %c42 : index
    }
    return
  }
}
